overflow, some responsive fixes, index widgets

--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -134,6 +134,10 @@
       margin-right: 0;
     }
   }
+
+  .wrap{
+    overflow: hidden;
+  }
 }
 
 //this media quiery is out of order because Chrome thinks
